--- a/_posts/2018-12-21-markdown-기본-문법-및-사용.markdown
+++ b/_posts/2018-12-21-markdown-기본-문법-및-사용.markdown
@@ -36,7 +36,7 @@ html 에서 h 태그와 같은 효과로, #을 추가할수록 글자 크기가 
 
 
 
-## 줄바꿈  
+## **줄바꿈**
 
 
 처음엔 마크다운에서 그냥 엔터키로 줄바꿈이 되지 않아 핵당황했던 기억 ..
@@ -46,28 +46,28 @@ html 에서 h 태그와 같은 효과로, #을 추가할수록 글자 크기가 
 
 
 
-## 글자 표시  
+## **글자 표시**
 
-##### 글자 굵게 표시
+##### **글자 굵게 표시**
 `**글자 강조**`
 
 글자를 굵게 표시해서 강조하고 싶게 할 경우 강조하고 싶은 글자 양쪽에을 붙여주면 된다. (html 에서 b 태그와 동일한 효과)
 
 
-##### 이탤릭체 표기
+##### **이탤릭체 표기**
 `_글자 기울이기_`
 `*글자 기울이기*`
 
 이탤릭체로 글자를 기울여서 표시하고 싶으면 글자 양 옆에 `언더바(_) 혹은 *`을 붙여 주면 된다.
 
 
-##### 글자 강조 (background에)
+##### **글자 강조 (background에)**
 ``글자 강조``
 
 background에 색상을 주어 글자를 강조를 할 수도 있다. 이 경우 글자 양쪽에 `'`을 붙여준다.
 
 
-##### 글머리 표시
+##### **글머리 표시**
 `* 글머리1`
 `* 글머리2`
 `* 글머리3`
@@ -75,13 +75,13 @@ background에 색상을 주어 글자를 강조를 할 수도 있다. 이 경우
 글머리를 넣기 위해선 글자 앞에 `*이나 -`를 붙여주면 된다.
 
 
-##### 인용문
+##### **인용문**
 > 인용문 작성 예시
 
 인용문을 넣기 위해선 글자 앞에 `>`를 붙여 주면 된다.
 
 
-## 링크 추가
+## **링크 추가**
 `<euunnnb@gmail.com>`
 `<http://google.com>`
 `[구글](http://google.com)`
@@ -92,18 +92,20 @@ background에 색상을 주어 글자를 강조를 할 수도 있다. 이 경우
 만약 직접 url을 표시하는 대신 글자에 링크를 달기 위해서는 글자 양쪽을 []로 감싸고 옆에 url을 ()안에 작성한다.  
 혹은, 이미지와 같이 링크들을 따로 모아서 작성할 수도 있다.
 
-## 소스 코드 추가
-![image1](http://eun-bi.github.io/images/posting/1221_5.PNG)
->```python
->print('hello')
->print('world')
+## **소스 코드 추가**
 
+![image1](http://eun-bi.github.io/images/posting/1221_5.PNG)
+
+```python
+print('hello')
+print('world')
+```
 
 포스팅 중 소스코드를 덧붙여 작성하기 위해서는
 해당 언어명 앞에 "```"를 붙여주고 다음 줄에 소스코드를 이어 작성한다.
 
 
-## 이미지 추가
+## **이미지 추가**
 `![이미지 대체텍스트](이미지링크)`
 
 같은 프로젝트에 있는 이미지는 물론 외부 url 링크를 작성해 이미지를 불러올 수 있다.  
